2008-05-27  Michael Monreal  <mmonreal@svn.gnome.org>

	* src/Extensions/Banshee.Podcasting/Banshee.Podcasting.Gui/PodcastActions.cs:
	Use gtk-add instead of gtk-new icon in the podcast source to match the
	Last.fm source. Fixes BGO #534817.

2008-05-27  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Extensions/Banshee.Podcasting/Banshee.Podcasting.Data/PodcastTrackInfo.cs:
	Return the item's PubDate as the ReleaseDate.

	* src/Core/Banshee.ThickClient/Banshee.Gui.Widgets/TrackInfoDisplay.cs: If
	the current track is a podcast item, display "from X published Y" instead
	of "by X from Z".

2008-05-25  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Extensions/Banshee.Podcasting/Banshee.Podcasting.Gui/PodcastUnheardFilterView.cs:
	* src/Core/Banshee.ThickClient/Banshee.Sources.Gui/FilteredListSourceContents.cs:
	Fix the build.

2008-05-25  Gabriel Burt  <gabriel.burt@gmail.com>

	This patch adds another filter to the podcast browser - the ability to
	filter on all/new/old items.  The default is to only show New Items, in
	keeping with the most common use case of podcast users.  Items are marked
	as old after being played.  They can be marked old manually via the
	Edit menu and track context menu, or by selecting one or more items and
	pressing y.

	* *.mdp: MonoDevelop changed some <Project> attributes across all these.

	* src/Extensions/Banshee.Podcasting/Banshee.Podcasting/PodcastService.cs:
	Add hack to be able to not handle FeedItem changes when doing bulk ops.

	* src/Extensions/Banshee.Podcasting/Banshee.Podcasting/PodcastQuery.cs:
	New class, commented out, will replace BansheeQuery when in podcasting.
	Zero work done on it so far.

	* src/Extensions/Banshee.Podcasting/Banshee.Podcasting.Gui/PodcastSourceContents.cs:
	Add another filter list view with three options: All Items, New Items, and
	Old Items.

	* src/Extensions/Banshee.Podcasting/Banshee.Podcasting.Gui/PodcastActions.cs:
	Change the Mark as Old keybinding to y (ala gmail archive).  Implement